Fixed spacing, etc. on dash

--- a/client/src/components/Dash/dash.css
+++ b/client/src/components/Dash/dash.css
@@ -1,5 +1,6 @@
 .dash {
   display: grid;
+  padding: 2rem;
   grid-template-columns: 50% 50%;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-row-gap: 2rem;
