--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -20,9 +20,11 @@
     flex-basis: calc(100% - 300px);
     flex-grow: 1;
     height: 100%;
+    display: flex;
+    flex-direction: column;
     background-color: #fff;
     align-self: flex-end;
     overflow-y: auto;
     overflow-x: hidden;
-    padding-right: 2rem;
+    padding-right: 4rem;
 }
